k8s/dashy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: config
              mountPath: /app/public/conf.yml
              subPath: conf.yml
      volumes:
        - name: config
          configMap:
            name: dashy-config
