k8s/dashy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  type: ClusterIP
  selector:
    app: dashy
  ports:
    - port: 80
      targetPort: 80
